wrap playicons in fixed width div to table resizing

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,8 @@
   font-weight: bold;
   font-size: 15px;
 }
+
+.playicon-wrapper {
+  width: 16px;
+  padding-left: 4px;
+}
